CNSDEVCOLECT/force-app/main/default/objects/AccesoSiniestros__mdt/AccesoSiniestros__mdt.object-meta.xml
<CustomObject>
    <label>AccesoSiniestros</label>
    <pluralLabel>AccesoSiniestros</pluralLabel>
</CustomObject>