CNSDEVCOLECT/force-app/main/default/objects/AccesoSiniestros__mdt/fields/cKey__c.field-meta.xml
<CustomField>
    <fullName>cKey__c</fullName>
    <label>cKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>