CNSDEVCOLECT/force-app/main/default/objects/AccesoSiniestros__mdt/fields/contrasena__c.field-meta.xml
<CustomField>
    <fullName>contrasena__c</fullName>
    <label>contraseña</label>
    <length>50</length>
    <type>Text</type>
</CustomField>