CNSDEVCOLECT/force-app/main/default/objects/AccesoSiniestros__mdt/fields/cSecret__c.field-meta.xml
<CustomField>
    <fullName>cSecret__c</fullName>
    <label>cSecret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>