CNSDEVCOLECT/force-app/main/default/objects/AccesoSiniestros__mdt/fields/Instancia__c.field-meta.xml
<CustomField>
    <fullName>Instancia__c</fullName>
    <label>Instancia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>