CNSDEVCOLECT/force-app/main/default/objects/AccesoSiniestros__mdt/fields/UsuarioSf__c.field-meta.xml
<CustomField>
    <fullName>UsuarioSf__c</fullName>
    <label>UsuarioSf</label>
    <type>Email</type>
</CustomField>